--- a/_Frontend/omi-finder/public/index.html
+++ b/_Frontend/omi-finder/public/index.html
@@ -22,6 +22,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 		<title>OMI Finder</title>
+		<!--
+        Import Roboto and RocknRoll One from from Google Fonts
+    -->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/css2?family=Roboto&family=RocknRoll+One&display=swap" rel="stylesheet" />
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
